# graphml-class

./: .dockerignore  .flake8  .gitignore  4_link_predict.ipynb  5_graph_classification.ipynb  6_load_data.ipynb  Dockerfile  LICENSE  Part 1 - Knowledge Graph Construction.ipynb  Part 2 - Network Science.ipynb  Part 2 - Quantitative Networks - Social Network Analysis and Network Science.ipynb  Part 3 - Graph Analytics with Cypher.ipynb  Part 4 - Graph Machine Learning.ipynb  Part 5 - Network Motifs with PySpark and GraphFrames.ipynb  README.md  docker-compose.yml  graphistry_bolt_tutorial_public.ipynb  markdownlint.config  pyproject.toml  requirements.txt
data/citation/: node_role_s.pkl
data/stats.meta.stackexchange.com/Posts.parquet/: .part-00000-29687a2e-0bfe-403e-9da5-2ba16e193757-c000.snappy.parquet.crc  part-00000-29687a2e-0bfe-403e-9da5-2ba16e193757-c000.snappy.parquet
data/stats.meta.stackexchange.com/Users.parquet/: .part-00000-91ac5220-f2c7-4255-bbe3-b99516596c55-c000.snappy.parquet.crc  part-00000-91ac5220-f2c7-4255-bbe3-b99516596c55-c000.snappy.parquet
data/stats.meta.stackexchange.com/Votes.parquet/: .part-00000-d8ae3d83-08eb-4ff1-8442-3196eb37ddd4-c000.snappy.parquet.crc  part-00000-d8ae3d83-08eb-4ff1-8442-3196eb37ddd4-c000.snappy.parquet
envs/: graphistry.env  neo4j.env  search.env
graphml_class/: citation.py  clean.py  motif.py  palette.py  utils.py
graphml_class/citation/: dgl.py  networkx.py
graphml_class/stats/: download.py  graph.py  motif.py  xml_to_parquet.py
neo4j/: load.all.cypher  load.cypher  load.ofac.sample.cypher  ofac.sample.cypher
scripts/: download.py
test/: test_citation.py  test_utils.py
