[tool.poetry]
name = "Full Stack Graph Machine Learning"
version = "1.0.0"
description = "Graphlet AI - Full Stack Graph Machine Learning: Theory, Practice, Tools and Techniques"
authors = ["Russell Jurney <rjurney@graphlet.ai>"]
license = "MIT"
readme = "README.md"
packages = [{include = "graphml_class"}]

[tool.poetry.urls]
"Company Homepage" = "https://graphlet.ai"
"Class Homepage" = "https://technologytransfer.it/events-mec/graph-machine-learning-2/"
"Teacher Homepage" = "https://linkedin.com/in/russelljurney"
"Code Repository" = "https://github.com/Graphlet-AI/graphml-class"
"Bug Tracker" = "https://github.com/Graphlet-AI/graphml-class/issues"

[tool.poetry.dependencies]
python = "3.10.11"
python-dateutil = "^2.8.2"
graphistry = "^0.34.17"
littleballoffur = { git = "https://github.com/Graphlet-AI/littleballoffur#rjurney/minus-networkit" }
networkx = "^3.1"
numpy = "^1.24.3"
pandas = "<2.0"
requests = "^2.32.3"
seaborn = "^0.12.2"
torch = [
    {"platform" = "linux", "url" = "https://files.pythonhosted.org/packages/81/58/431fd405855553af1a98091848cf97741302416b01462bbf9909d3c422b3/torch-1.13.1-cp310-cp310-manylinux1_x86_64.whl" },
    {"platform" = "darwin", "url" = "https://files.pythonhosted.org/packages/82/d8/0547f8a22a0c8aeb7e7e5e321892f1dcf93ea021829a99f1a25f1f535871/torch-1.13.1-cp310-none-macosx_10_9_x86_64.whl" },
# {"platform" = "darwin", "url" = "https://files.pythonhosted.org/packages/24/45/61e41ef8a84e1d6200ff10b7cb87e23e211599ab62420396a363295f973c/torch-1.13.1-cp310-none-macosx_11_0_arm64.whl" },
]
torch-geometric = "^2.6.1"
pyg-library = "^0.2.0"
wandb = "^0.18.7"
# faiss-cpu = "^1.9.0"
karateclub = { git = "https://github.com/benedekrozemberczki/karateclub.git" }
neo4j = "5.26.0"
scikit-learn = "^1.5.2"
# graphrole = "^1.1.1"
pyspark = "^3.5.3"
executing = "^2.1.0"

[tool.poetry.group.dev.dependencies]
nbdime = "^4.0.2"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.12.0"
pytest = "^8.3.3"
pytest-stub = "^1.1.0"
ipython = "^8.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]
include = ["graphlet", "test"]

[tool.isort]
profile = "black"
src_paths = ["graphlet", "test"]

[tool.mypy]
python_version = "3.10"
mypy_path = ["graphlet", "test"]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
