[tool.poetry]
name = "Full Stack Graph Machine Learning"
version = "1.1.1"
description = "Graphlet AI - Full Stack Graph Machine Learning: Theory, Practice, Tools and Techniques"
authors = ["Russell Jurney <rjurney@graphlet.ai>"]
license = "MIT"
readme = "README.md"
packages = [{include = "graphml_class"}]

[tool.poetry.urls]
"Company Homepage" = "https://graphlet.ai"
"Class Homepage" = "https://technologytransfer.it/events-mec/graph-machine-learning-2/"
"Teacher Homepage" = "https://linkedin.com/in/russelljurney"
"Code Repository" = "https://github.com/Graphlet-AI/graphml-class"
"Bug Tracker" = "https://github.com/Graphlet-AI/graphml-class/issues"

[tool.poetry.dependencies]
python = "^3.11"
Cython = "^0.29.35"
cmake = "^3.26.3"
dgl = "1.1.1"
faiss-cpu = "^1.7.4"
graphdatascience = "^1.12"
graphframes-latest = "^0.8.3"
graphistry = "^0.34.17"
graphrole = "^1.1.1"
karateclub = { git = "https://github.com/benedekrozemberczki/karateclub.git", branch = "master" }
littleballoffur = "^2.3.1"
llvmlite = "^0.43.0"
neo4j = "5.26.0"
networkit = "^11.0"
networkx = ">=3.1"
numba = "^0.60.0"
numpy = "^1.24.3"
pandas = "<2.0"
py7zr = "^0.22.0"
pyspark = "^3.5.3"
python-dateutil = "^2.8.2"
requests = "^2.31.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
sentence-transformers = "^3.3.1"
torch = [
    {platform = "linux", version = "^2.5.1", source = "pytorch-cpu"},
    {platform = "darwin", url = "https://download.pytorch.org/whl/cpu/torch-2.5.1-cp311-none-macosx_11_0_arm64.whl"}
]
torchmetrics = "^1.5.2"
torch-geometric = "^2.6.1"
umap-learn = "^0.5.7"
wandb = "^0.18.5"
xgboost = "^2.1.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
ipython = "^8.15.0"
isort = "^5.12.0"
nbdime = "^4.0.2"
pytest = "^7.4.2"
pytest-stub = "^1.1.0"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]
include = ["graphlet", "test"]

[tool.isort]
profile = "black"
src_paths = ["graphlet", "test"]

[tool.mypy]
python_version = "3.11"
mypy_path = ["graphlet", "test"]
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
